change toList to be still java 11 compatible + remove java 8 reference in prefs